Started CSGOX structuring

--- a/Source/CSGOX/CSGOX.vcxproj
+++ b/Source/CSGOX/CSGOX.vcxproj
@@ -167,12 +167,20 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Code\CSGOX.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Application Programming Interface\Link.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\Features\Combat\Aim Assistance.cpp" />
+    <ClCompile Include="Code\Source Development Kit\Toolkits\Features\Combat\Combat.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Framework\Precompile.hpp" />
-    <ClInclude Include="Code\Source Development Kit\Application Programming Interface\Interfaces\header.h" />
-    <ClInclude Include="Code\Source Development Kit\Application Programming Interface\Types\eader.h" />
-    <ClInclude Include="Code\Source Development Kit\Toolkits\header.h" />
+    <ClInclude Include="Code\Source Development Kit\Application Programming Interface\Link.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Awareness\Awareness.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Combat\Aim Assistance.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Combat\Combat.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Features Context.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Features.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Miscellaneous\Miscellaneous.hpp" />
+    <ClInclude Include="Code\Source Development Kit\Toolkits\Features\Settings\Settings.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CSGO SDK\CSGO SDK.vcxproj">
